compiler/testData/diagnostics/tests/inline/localFun.kt
// RUN_PIPELINE_TILL: FRONTEND
fun main() {
    <!NOT_YET_SUPPORTED_IN_INLINE!>inline<!> fun a(){
    }
}

/* GENERATED_FIR_TAGS: functionDeclaration, inline, localFunction */
